--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My First Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, eum facilis! Sunt, sit? Praesentium facilis odit nesciunt temporibus totam maiores perferendis autem delectus ipsam voluptas! Mollitia adipisci reprehenderit nam ut?</p>
+    </div>
 </body>
 </html>
