--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 </head>
 <body>
     <div>
-        <h3>My First Website</h3>
+        <h3>My First Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, eum facilis! Sunt, sit? Praesentium facilis odit nesciunt temporibus totam maiores perferendis autem delectus ipsam voluptas! Mollitia adipisci reprehenderit nam ut?</p>
+    </div>
+    <div>
+        <h3>My Second Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, eum facilis! Sunt, sit? Praesentium facilis odit nesciunt temporibus totam maiores perferendis autem delectus ipsam voluptas! Mollitia adipisci reprehenderit nam ut?</p>
+    </div>
+    <div>
+        <h3>My Third Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, eum facilis! Sunt, sit? Praesentium facilis odit nesciunt temporibus totam maiores perferendis autem delectus ipsam voluptas! Mollitia adipisci reprehenderit nam ut?</p>
+    </div>
+    <div>
+        <h3>My Fourth Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, eum facilis! Sunt, sit? Praesentium facilis odit nesciunt temporibus totam maiores perferendis autem delectus ipsam voluptas! Mollitia adipisci reprehenderit nam ut?</p>
     </div>
 </body>
