added a list to push code

--- a/index.html
+++ b/index.html
@@ -23,5 +23,13 @@
         <h3>My Fourth Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, eum facilis! Sunt, sit? Praesentium facilis odit nesciunt temporibus totam maiores perferendis autem delectus ipsam voluptas! Mollitia adipisci reprehenderit nam ut?</p>
     </div>
+    <div>
+        <h3>How to push incremantal code</h3>
+        <ol>
+            <li>git add .</li>
+            <li>git comit -m"add a meaningful message</li>
+            <li>git push</li>
+        </ol>
+    </div>
 </body>
 </html>
